--- a/src/vscp/helperlib/linux/Makefile.in
+++ b/src/vscp/helperlib/linux/Makefile.in
@@ -42,6 +42,7 @@ VSCPHELPER_OBJECTS =  libvscphelper.o\
 	../../common/guid.o\
 	../../../common/crc.o\
 	../../../common/crc8.o\
+	../../common/aes.o \
 	../../../common/mongoose.o
 
 PROJOBJS = ../vscphelperlib.h\
@@ -57,6 +58,7 @@ ALWAYS_BUILD = ../../common/vscpremotetcpif.o\
 	../../common/guid.o\
 	../../../common/crc.o\
 	../../../common/crc8.o\
+	../../../common/aes.o\
 	../../../common/mongoose.o
 
 ### Targets: ###
