--- a/src/vscp/mkpasswd/Makefile.in
+++ b/src/vscp/mkpasswd/Makefile.in
@@ -39,13 +39,17 @@ MKPASSWD_OBJECTS =  mkpasswd.o\
 	../common/guid.o\
 	../../common/md5.o\
 	../../common/crc.o\
-	../../common/crc8.o
+	../../common/crc8.o\
+	../../common/aes.o
+
 
 ALWAYS_BUILD = ../common/vscphelper.o\
 	../common/guid.o\
 	../../common/md5.o\
 	../../common/crc.o\
 	../../common/crc8.o
+	../../common/aes.o \
+
 
 ### Targets: ###
 
