--- a/src/vscp/vscpcmd/Makefile.in
+++ b/src/vscp/vscpcmd/Makefile.in
@@ -39,6 +39,7 @@ CANCMD_OBJECTS =  vscpcmd.o\
 	../../common/crc.o\
 	../../common/crc8.o\
 	../common/guid.o\
+	../../common/aes.o \
 	../../common/mongoose.o\
 
 ALWAYS_BUILD = ../common/vscpremotetcpif.o\
@@ -46,6 +47,7 @@ ALWAYS_BUILD = ../common/vscpremotetcpif.o\
 	../common/guid.o\
 	../../common/crc.o\
 	../../common/crc8.o\
+	../../common/aes.o \
 	../../common/mongoose.o\
 
 ### Targets: ###
