--- a/src/vscp/drivers/level2/mqtt/linux/Makefile.in
+++ b/src/vscp/drivers/level2/mqtt/linux/Makefile.in
@@ -42,6 +42,7 @@ MQTT_OBJECTS = ../common/mqttobj.o\
 	../../../../common/guid.o\
 	../../../../../common/crc.o\
 	../../../../../common/crc8.o\
+	../../../../../common/aes.o\
 	../../../../../common/mongoose.o\
 
 	
@@ -51,6 +52,7 @@ PROJOBJS =  ../common/mqttobj.o\
 	../../../../common/guid.o\
 	../../../../../common/crc.o\
 	../../../../../common/crc8.o\
+	../../../../../common/aes.o\
 	../../../../../common/mongoose.o\
 
 ALWAYS_BUILD = 	../../../../common/vscpremotetcpif.o\
@@ -58,6 +60,7 @@ ALWAYS_BUILD = 	../../../../common/vscpremotetcpif.o\
 	../../../../common/guid.o\
 	../../../../../common/crc.o\
 	../../../../../common/crc8.o\
+	../../../../../common/aes.o\
 	../../../../../common/mongoose.o\
 
 ### Targets: ###
