--- a/src/vscp/linuxvscpl1/Makefile.in
+++ b/src/vscp/linuxvscpl1/Makefile.in
@@ -41,6 +41,7 @@ VSCPL1_OBJECTS =  vscpl1.o\
 	../common/guid.o\
 	../../common/crc.o\
 	../../common/crc8.o\
+	../../common/aes.o\
 	../../common/mongoose.o
 	
 PROJOBJS  =  ../common/vscpremotetcpif.o\
@@ -48,6 +49,7 @@ PROJOBJS  =  ../common/vscpremotetcpif.o\
 	../common/guid.o\
 	../../common/crc.o\
 	../../common/crc8.o\
+	../../common/aes.o\
 	../../common/mongoose.o
 
 ALWAYS_BUILD = ../common/vscpremotetcpif.o\
@@ -55,6 +57,7 @@ ALWAYS_BUILD = ../common/vscpremotetcpif.o\
 	../common/guid.o\
 	../../common/crc.o\
 	../../common/crc8.o\
+	../../common/aes.o\
 	../../common/mongoose.o
 
 ### Targets: ###
