--- a/src/vscp/drivers/level2/tcpdrv/linux/Makefile.in
+++ b/src/vscp/drivers/level2/tcpdrv/linux/Makefile.in
@@ -42,6 +42,7 @@ VSCPTCPIP_OBJECTS = vscptcpiplink.o\
 	../../../../common/guid.o\
 	../../../../../common/crc.o\
 	../../../../../common/crc8.o\
+	../../../../../common/aes.o\
 	../../../../../common/mongoose.o\
 
 PROJOBJS =  vscptcpiplink.o\
@@ -50,6 +51,7 @@ PROJOBJS =  vscptcpiplink.o\
 	../../../../common/guid.o\
 	../../../../../common/crc.o\
 	../../../../../common/crc8.o\
+	../../../../../common/aes.o\
 	../../../../../common/mongoose.o\
 
 ALWAYS_BUILD = 	../../../../common/vscpremotetcpif.o\
@@ -57,6 +59,7 @@ ALWAYS_BUILD = 	../../../../common/vscpremotetcpif.o\
 	../../../../common/guid.o\
 	../../../../../common/crc.o\
 	../../../../../common/crc8.o\
+	../../../../../common/aes.o\
 	../../../../../common/mongoose.o\
 
 ### Targets: ###
