Fixed linux xompile issue

--- a/src/vscp/uvscpd/Makefile.in
+++ b/src/vscp/uvscpd/Makefile.in
@@ -43,6 +43,7 @@ UVSCPD_OBJECTS =  uvscpd.o\
 	../../common/crc.o \
 	../../common/crc8.o \
 	../../common/md5.o \
+	../../common/aes.o\
 	../../common/configfile.o \
 	../../common/randpassword.o 
 
