--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -52,7 +52,7 @@ VSCPD_OBJECTS =  vscpd.o \
 	../../common/vscpwebserver.o \
 	../../common/vscprestserver.o \
 	../../common/vscpwebsocketserver.o \
-	../../common/udpclientthread.o \
+	../../common/vscpudpclientthread.o \
 	../../common/vscpmulticastclientthread.o \
 	../../common/tables.o \
 	../../common/vscpautomation.o \
