--- a/src/vscp/drivers/level2/rawethernet/linux/Makefile.in
+++ b/src/vscp/drivers/level2/rawethernet/linux/Makefile.in
@@ -9,10 +9,11 @@ top_srcdir = @top_srcdir@
 top_wxsrcdir = @top_wxsrcdir@
 top_builddir = @top_builddir@
 top_wxbuilddir = @top_wxbuilddir@
+CC = @CC@
 CXX = @CXX@
 CXXFLAGS = @CXXFLAGS@ -fPIC -I../../../../common -I../../../../../common
 CPPFLAGS = -I include  @CPPFLAGS@ -D__LINUX__ -D MG_ENABLE_THREADS -fPIC -I../../../../common -I../../../../../common
-CFLAGS = -D__LINUX__ -fPIC -I../../../../common -I../../../../../common
+CFLAGS =  @CFLAGS@ -D__LINUX__ -fPIC -I../../../../common -I../../../../../common
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@
 DLFLAGS = -g -shared -fPIC
@@ -43,6 +44,7 @@ RAWETH_OBJECTS = dlldrvobj.o\
 	../../../../../common/crc.o\
 	../../../../../common/crc8.o\
 	../../../../../common/aes.o\
+	fastpbkdf2.o
 
 PROJOBJS =  ../../../../common/vscpremotetcpif.o\
 	../../../../common/vscphelper.o\
@@ -50,7 +52,8 @@ PROJOBJS =  ../../../../common/vscpremotetcpif.o\
 	../../../../../common/crc.o\
 	../../../../../common/crc8.o\
 	../../../../../common/aes.o\
-	../../../../../common/mongoose.o
+	../../../../../common/mongoose.o\
+	fastpbkdf2.o
 
 
 ALWAYS_BUILD = ../../../../common/vscpremotetcpif.o\
@@ -59,7 +62,8 @@ ALWAYS_BUILD = ../../../../common/vscpremotetcpif.o\
 	../../../../../common/crc.o\
 	../../../../../common/crc8.o\
 	../../../../../common/aes.o\
-	../../../../../common/mongoose.o
+	../../../../../common/mongoose.o\
+	fastpbkdf2.o
 
 ### Targets: ###
 
@@ -85,6 +89,8 @@ clean:
 distclean: clean
 	rm -f config.cache config.log config.status bk-deps bk-make-pch shared-ld-sh Makefile
 
+fastpbkdf2.o: ../../../../../common/fastpbkdf2.c ../../../../../common/fastpbkdf2.h
+	$(CC) -std=c99 $(CFLAGS) -c ../../../../../common/fastpbkdf2.c -o $@
 
 test:  test.o $(PROJOBJS)
 	$(CXX) -o $@ test.o $(PROJOBJS) $(LDFLAGS) -L$(LIBDIRNAME) $(WXLIBS) $(EXTRALIBS)
