--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -11,11 +11,10 @@ top_builddir = @top_builddir@
 top_wxbuilddir = @top_wxbuilddir@
 CC = @CC@
 CXX = @CXX@
-MONGOOSE_CFLAGS = -DMG_ENABLE_THREADS -DMG_ENABLE_IPV6 -DMG_ENABLE_SSL -DMG_ENABLE_MQTT_BROKER -DMG_ENABLE_JAVASCRIPT -DMG_ENABLE_HTTP_CGI -DMG_ENABLE_HTTP_SSI -DMG_ENABLE_HTTP_SSI_EXEC -DMG_ENABLE_HTTP_WEBDAV -DMG_ENABLE_GETADDRINFO -DMG_ENABLE_HTTP_URL_REWRITES
-V7_CFLAGS = -DMG_ENABLE_SSL -DV7_ENABLE_JS_GETTERS -DV7_ENABLE_JS_SETTERS -DV7_BUILD_PROFILE=3 -DV7_ENABLE_CRYPTO -DV7_ENABLE_FILE -DV7_ENABLE_SOCKET
-CFLAGS = -std=c99 @CFLAGS@ -D MG_ENABLE_THREADS  -D MG_ENABLE_MQTT_BROKER -DCBC -I../../common -I../../../common
+MONGOOSE_CFLAGS = -DMG_ENABLE_THREADS -DMG_ENABLE_IPV6 -DMG_ENABLE_SSL -DMG_ENABLE_HTTP_CGI -DMG_ENABLE_HTTP_SSI -DMG_ENABLE_HTTP_SSI_EXEC -DMG_ENABLE_HTTP_WEBDAV -DMG_ENABLE_GETADDRINFO -DMG_ENABLE_HTTP_URL_REWRITES
+CFLAGS = -std=c99 @CFLAGS@ -D MG_ENABLE_THREADS  -DCBC -I../../common -I../../../common
 CXXFLAGS = @CXXFLAGS@
-CPPFLAGS = @CPPFLAGS@ -fno-var-tracking-assignments -D MG_ENABLE_THREADS  -D MG_ENABLE_MQTT_BROKER -D MG_ENABLE_COAP -I../../common -I../../../common 
+CPPFLAGS = @CPPFLAGS@ -fno-var-tracking-assignments -D MG_ENABLE_THREADS  -I../../common -I../../../common 
 CPPFLAGS += $(MONGOOSE_CFLAGS) $(V7_CFLAGS)
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@
@@ -57,7 +56,6 @@ VSCPD_OBJECTS =  vscpd.o \
 	../../common/tables.o \
 	../../common/vscpautomation.o \
 	../../common/knownnodes.o \
-        ../../common/v7callbacks.o \
         ../../../common/jsonreader.o \
         ../../../common/jsonwriter.o \
         ../../../common/jsonval.o \
@@ -76,7 +74,6 @@ VSCPD_SPECIALS = vscphelper.o \
 	crc8.o \
 	randpassword.o \
 	frozen.o  \
-	v7.o  \
 	duktape.o \
 	mongoose.o \
 	sqlite3.o \
