--- a/.gitignore
+++ b/.gitignore
@@ -256,5 +256,22 @@ src/vscp/drivers/level2/sim/linux/vscp2drv_sim/
 nbproject/
 src/vscp/daemon/linux/nbproject/
 src/vscp/vscpworks/nbproject/
-
+.vscode/
+src/vscp/daemon/linux/1
+src/vscp/daemon/linux/1-shm
+src/vscp/daemon/linux/1-wal
+src/vscp/daemon/linux/60
+src/vscp/daemon/linux/61.744183
+src/vscp/daemon/linux/8080
+src/vscp/daemon/linux/9598
+src/vscp/daemon/linux/node_modules/webpack/
+tests/helperlib/ttt
+tests/multicast/alistener
+tests/multicast/announce-listener
+tests/multicast/compiling_error.txt
+tests/multicast/mclistener
+tests/multicast/mcsender
+tests/multicast/sender
+tests/udp/receive_vscp_udp_frame
+tests/udp/send_vscp_udp_frame
 
