vscphelperlib header is now installed in the correct place during install

--- a/src/vscp/helperlib/linux/Makefile.in
+++ b/src/vscp/helperlib/linux/Makefile.in
@@ -71,6 +71,7 @@ all: libvscphelper.so test lib
 
 install: all
 	$(INSTALL_PROGRAM) libvscphelper.so $(libdir)
+	$(INSTALL_PROGRAM) ../vscphelperlib.h $(includedir)
 	ar rcs libvscphelper.a libvscphelper.o
 
 uninstall: 
