Javascript code moved to it's own file

--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -57,6 +57,7 @@ VSCPD_OBJECTS =  vscpd.o \
 	../../common/vscpautomation.o \
 	../../common/knownnodes.o \
 	../../common/duktape_callbacks.o \
+	../../common/vscp_javascript.o \
         ../../../common/jsonreader.o \
         ../../../common/jsonwriter.o \
         ../../../common/jsonval.o \
