--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -84,7 +84,7 @@ VSCPD_SPECIALS = vscphelper.o \
 	sqlite3math.o\
 	aes.o\
 	fastpbkdf2.o\
-	vscpweb.o
+	vscpmd5.o
 
 # Add object files that always should be built here
 ALWAYS_BUILD = 
@@ -168,6 +168,9 @@ sqlite3math.o: ../../../common/sqlite3math.o
 
 fastpbkdf2.o: ../../../common/fastpbkdf2.o ../../../common/fastpbkdf2.h
 	$(CC) $(CFLAGS) -c ../../../common/fastpbkdf2.c -o $@
+	
+vscpmd5.o: ../../../common/vscpmd5.o ../../../common/vscpmd5.h
+	$(CC) $(CFLAGS) -c ../../../common/vscpmd5.c -o $@	
 
 vscpweb.o: ../../../common/vscpweb.o ../../../common/vscpweb.h
 	$(CC) $(CFLAGS) -c ../../../common/vscpweb.c -o $@	
