--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -62,6 +62,7 @@ VSCPD_OBJECTS =  vscpd.o \
         ../../../common/jsonwriter.o \
         ../../../common/jsonval.o \
 	../../../common/vscpweb.o \
+	../../../common/lua/lsqlite3.o \
 	../../../common/lua_all.o \	
 
 # The following files are built in the local folder to
@@ -174,7 +175,10 @@ vscpmd5.o: ../../../common/vscpmd5.o ../../../common/vscpmd5.h
 	$(CC) $(CFLAGS) -c ../../../common/vscpmd5.c -o $@	
 
 vscpweb.o: ../../../common/vscpweb.o ../../../common/vscpweb.h
-	$(CC) $(CFLAGS) -c ../../../common/vscpweb.c -o $@	
+	$(CC) $(CFLAGS) -c ../../../common/vscpweb.c -o $@
+
+lsqlite3.o: ../../../common/lua/lsqlite3.o 
+	$(CC) -D_POSIX_SOURCE $(CFLAGS) -I../../../common/lua -c ../../../common/lua/lsqlite3.c -o $@	
 	
 lua_all.o: ../../../common/lua_all.o 
 	$(CC) $(CFLAGS) -I../../../common/lua -c ../../../common/lua_all.c -o $@	
